RESOLVED FIXED159551
REGRESSION(r202273): [GTK] Redirected X window is resized to the previous size on size allocate
https://bugs.webkit.org/show_bug.cgi?id=159551
Summary REGRESSION(r202273): [GTK] Redirected X window is resized to the previous siz...
Carlos Garcia Campos
Reported 2016-07-08 03:52:44 PDT
In r202273 I added webkitWebViewBaseResizeRedirectedWindow() helper to remove duplicated code in all places where we were resizing the redirected window to the current drawing area size. But on size allocate, we were updating the redirected window first, and then the drawing area, to ensure that when the drawing area notifies the web process the redirected window is already at the new size. This regression doesn't have any visual effect, because we are ensure the right size always before rendering, but there's a small extra resize in this case.
Attachments
Patch (2.46 KB, patch)
2016-07-08 03:54 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-07-08 03:54:21 PDT
WebKit Commit Bot
Comment 2 2016-07-08 03:55:55 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2016-07-13 23:35:03 PDT
Note You need to log in before you can comment on or make changes to this bug.